处理警告问题